syntax = "proto3";

package proto;

option go_package = "/api";

service Publisher {
  rpc SendMessage(Message) returns (Response) {}
  rpc Subscribe(SubscribeRequest) returns (stream Message) {}
}

message Message {
  string text = 1;
}

message Response {
  string result = 1;
}

message SubscribeRequest {
  string client_id = 1;
}
